<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/clProfile"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:labelFor="@id/txtName"
        android:text="@string/main_lblName_text"
        android:textColor="@color/color_state_selector"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:labelFor="@+id/txtEmail"
        android:text="@string/main_lblEmail_text"
        android:textColor="@color/color_state_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:autofillHints="@string/main_txtName_autofillHints"
        android:ems="10"
        android:hint="@string/main_txtName_hint"
        android:inputType="textAutoComplete|textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblName" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:autofillHints="@string/main_txtEmail_autofillHints"
        android:ems="10"
        android:hint="@string/main_txtEmail_hint"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:tint="@color/color_state_selector"
        app:layout_constraintEnd_toStartOf="@+id/imgEmail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail" />

    <ImageView
        android:id="@+id/imgEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginBottom="@dimen/main_margin"
        android:contentDescription="@string/main_imgEmail_desc"
        android:tint="@color/color_state_selector"
        app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
        app:layout_constraintEnd_toStartOf="@+id/txtPhonenumber"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtEmail"
        app:srcCompat="@drawable/ic_email_24dp" />

    <TextView
        android:id="@+id/lblPhonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_margin"
        android:labelFor="@+id/txtPhonenumber"
        android:text="@string/main_lblPhonenumber_text"
        android:textColor="@color/color_state_selector"
        app:layout_constraintStart_toStartOf="@+id/txtPhonenumber"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <ImageView
        android:id="@+id/imgPhonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/main_margin"
        android:layout_marginBottom="@dimen/main_margin"
        android:contentDescription="@string/main_imgPhonenumber_desc"
        android:tint="@color/color_state_selector"
        app:layout_constraintBottom_toBottomOf="@+id/txtPhonenumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtPhonenumber"
        app:srcCompat="@drawable/ic_call_24dp" />

    <EditText
        android:id="@+id/txtPhonenumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:autofillHints="@string/main_txtPhonenumber_autofillHints"
        android:ems="10"
        android:hint="@string/main_txtPhonenumber_hint"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toStartOf="@+id/imgPhonenumber"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintStart_toEndOf="@+id/imgEmail"
        app:layout_constraintTop_toBottomOf="@+id/lblPhonenumber" />

    <TextView
        android:id="@+id/lblAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:labelFor="@+id/txtAddress"
        android:text="@string/main_lblAddress_text"
        android:textColor="@color/color_state_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:autofillHints="@string/main_txtAddress_autofillHints"
        android:ems="10"
        android:hint="@string/main_txtAddress_hint"
        android:inputType="textPostalAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toStartOf="@+id/imgAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAddress" />

    <ImageView
        android:id="@+id/imgAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/main_margin"
        android:layout_marginBottom="@dimen/main_margin"
        android:contentDescription="@string/main_imgAddress_desc"
        android:tint="@color/color_state_selector"
        app:layout_constraintBottom_toBottomOf="@+id/txtAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_map_24dp" />

    <TextView
        android:id="@+id/lblWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:labelFor="@+id/txtWeb"
        android:text="@string/main_lblWeb_text"
        android:textColor="@color/color_state_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <EditText
        android:id="@+id/txtWeb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:autofillHints="@string/main_txtWeb_autofillHints"
        android:ems="10"
        android:hint="@string/main_txtWeb_hint"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toStartOf="@+id/imgWeb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblWeb" />

    <ImageView
        android:id="@+id/imgWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/main_margin"
        android:layout_marginBottom="@dimen/main_margin"
        android:contentDescription="@string/main_imgWeb_desc"
        android:tint="@color/color_state_selector"
        app:layout_constraintBottom_toBottomOf="@+id/txtWeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_web_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>